# BuzzsawVST

./: CMakeLists.txt
resource/: RCa01064  buzzsaw.aps  buzzsaw.rc
source/: buzzsawController.cpp  buzzsawController.h  buzzsawFactory.cpp  buzzsawProcessor.cpp  buzzsawProcessor.h
source/audio/: envelope.h  generator.h  pitch.h  samples.h
source/math/: const.h
source/subprocessors/: engineSubprocessor.cpp  engineSubprocessor.h
source/utility/: logger.cpp  logger.h  recycle.h  utility.h
